# pickipedia

./: .env.example  .gitignore  .gitmodules  .htaccess  Dockerfile  Jenkinsfile  LocalSettings.local.php.example  LocalSettings.php  README  README.md  composer.json  docker-compose.yml  load-backup.sh
deploy/: deploy.sh
extensions/: .gitkeep
extensions/BlueRailroadIntegration/: README.md  extension.json
extensions/BlueRailroadIntegration/maintenance/: importBlueRailroads.php
extensions/EmbedVideo/: EmbedVideo.hooks.php
extensions/PickiPediaRecordingMetadata/: extension.json
extensions/PickiPediaRecordingMetadata/i18n/: en.json
extensions/PickiPediaRecordingMetadata/src/: Hooks.php  RecordingMetadataContent.php  RecordingMetadataContentHandler.php
extensions/PickiPediaReleases/: PickiPediaReleases.alias.php  extension.json
extensions/PickiPediaReleases/i18n/: en.json
extensions/PickiPediaReleases/resources/: ext.pickipediaReleases.deliverBlueRailroad.js  ext.pickipediaReleases.deliverOtherContent.js  (+8 more)
extensions/PickiPediaVerification/: extension.json
tools/: podcast-episodes.py  podcast-feeds.json  podcast-firehose.py  podcast-guest-patterns.json  test_podcast_guests.py
tools/blue-railroad-import/: pyproject.toml  requirements.txt
tools/blue-railroad-import/blue_railroad_import/: __init__.py  chain_data.py  cli.py  config_parser.py  importer.py  leaderboard.py  models.py  token_page.py  wiki_client.py
tools/blue-railroad-import/tests/: __init__.py  test_chain_data.py  test_config_parser.py  test_importer.py  test_leaderboard.py  test_models.py
(+21 files in other folders)
