[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blue-railroad-import"
version = "1.0.0"
description = "Import Blue Railroad tokens from chain data to PickiPedia"
requires-python = ">=3.10"
dependencies = [
    "mwclient>=0.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
blue-railroad-import = "blue_railroad_import.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
